2005-12-19  Nathan Sidwell  <nathan@codesourcery.com>

	* gcc.dg/mt-loopi1.c: New.

2005-12-18  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/25481
	* gcc.dg/torture/pr25481.c: New testcase.

2005-12-18  Ulrich Weigand  <uweigand@de.ibm.com>

	PR rtl-optimization/21041
	* gcc.dg/pr21041.c: New test.

2005-12-18  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/25463
	* gfortran.dg/advance.f90: New test.

2005-12-18  Andreas Krebbel  <krebbel1@de.ibm.com>

	* gcc.dg/20051201-1.c: New test.

2005-12-18  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/25018
	*gfortran.dg/initialization_1.f90: New test.
	*gfortran.dg/enum_5.f90: Change dg-error to new message.
	*gfortran.dg/g77/980616-0.f: The same.

2005-12-17  Steven G. Kargl  <kargls@comcast.net>

	* PR fortran/25458
	* gfortran.dg/chkbits.f90: New test.

2005-12-17  Steven G. Kargl  <kargls@comcast.net>

	*gfortran.dg/enum_5.f:  Revert to previous version.

2005-12-17  Steven G. Kargl  <kargls@comcast.net>

	* gfortran.dg/imag_1.f: Fix nonstandard type declarations.
	* gfortran.dg/nested_modules_1.f90: Ditto.
	* gfortran.dg/hollerith_f95.f90: Ditto.
	* gfortran.dg/select_5.f90: Ditto.
	* gfortran.dg/secnds.f: Ditto.
	* gfortran.dg/hollerith2.f90: Ditto.
	* gfortran.dg/imag_2.f: Ditto.
	* gfortran.dg/ftell_2.f90: Ditto.
	* gfortran.dg/malloc_free_1.f90: Ditto.
	* gfortran.dg/logint-1.f: Ditto.
	* gfortran.dg/recursive_statement_functions.f90: Ditto.
	* gfortran.dg/e_d_fmt.f90: Ditto.
	* gfortran.dg/hollerith_legacy.f90: Ditto.
	* gfortran.dg/logint-2.f: Ditto.
	* gfortran.dg/enum_5.f90: Ditto.
	* gfortran.dg/f2c_2.f90: Ditto.
	* gfortran.dg/pr17143.f90: Ditto.
	* gfortran.dg/namelist_14.f90: Ditto.
	* gfortran.dg/logint-3.f: Ditto.
	* gfortran.dg/spread_scalar_source.f90: Ditto.
	* gfortran.dg/fmt_read_bz_bn.f90: Ditto.
	* gfortran.dg/namelist_11.f: Ditto.
	* gfortran.dg/g77/intrinsic-unix-bessel.f: Ditto.
	* gfortran.dg/g77/20010519-1.f
	* gfortran.dg/g77/alpha1.f: Ditto.