@@ -1,0 +1,11 @@
+// PR c++/20552
+// Origin: Ivan Godard <igodard@pacbell.net>
+
+template<int> struct A
+{
+  void foo()
+  {
+    typedef int T;                // { dg-error "previous" }
+    typedef __typeof__(*this) T;  // { dg-error "conflicting" }
+  }
+};
